Job search one-page functionality with Ajax

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 $box-bg-color: #efefef;
 $box-border-color: #c0c0c0;
+$ocean-breeze: #78A5A3;
 // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";
 @import "font-awesome";
