--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -6,6 +6,31 @@
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class:"box-form" }) do |f| %>
         <%= devise_error_messages! %>
 
+        <%= f.label "Account type" %>
+        <div class="user-type-toggle btn-group btn-group-toggle" data-toggle="buttons">
+          <label class="btn 
+          <%= 'active' if current_user.account_type == "applicant" %>
+          " id="applicant">
+            <input type="radio" name="options"autocomplete="off" checked value="applicant"> Apply for jobs
+          </label>
+          <label class="btn
+            <%= 'active' if current_user.account_type == "poster" %>
+          " id="poster">
+            <input type="radio" name="options"  autocomplete="off" value="poster"> Post jobs
+          </label>
+        </div>
+        <%= f.hidden_field :account_type %>
+
+        <div class="field">
+          <%= f.label :first_name %><br />
+          <%= f.text_field :first_name, autofocus: true %>
+        </div>
+
+        <div class="field">
+          <%= f.label :last_name %><br />
+          <%= f.text_field :last_name %>
+        </div>
+
         <div class="field">
           <%= f.label :email %><br />
           <%= f.email_field :email, autofocus: true %>
