--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -1,5 +1,5 @@
 <%- if controller_name != 'sessions' && controller_name != 'passwords' %>
-  <%= link_to "Already have an Account?", new_session_path(resource_name) %><br />
+  <%= link_to "Already have an account?", new_session_path(resource_name) %><br />
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations'  %>
