Styling on jobs index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 $box-bg-color: #efefef;
 $box-border-color: #c0c0c0;
 $ocean-breeze: #78A5A3;
+$ocean-mist: rgb(223, 235, 235);
 // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";
 @import "font-awesome";
