--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -111,6 +111,10 @@ thead {
   background-color: #78A5A3;
 }
 
+.ocean-mist {
+  background-color: rgb(161, 176, 175);
+}
+
 .navy {
   background-color: #444C5C
 }
