--- a/app/views/jobs/_job_panel.html.erb
+++ b/app/views/jobs/_job_panel.html.erb
@@ -1,5 +1,5 @@
 <%=render "application"%>
-<div class="panel">
+<div class="job-panel panel">
   <div class="panel-heading">
     <h1 class="panel-title"><%="#{@job.specialty} Opening In #{@job.city}, #{@job.state}"%></h1>
     <div class="panel-title">
