--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -36,7 +36,7 @@
       </table>
     </div>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-6 job-description-half">
     <!-- "data" updated via ajax on click of job table -->
     <div id="job-description-container">
       <h3>JOB DESCRIPTION</h3>
