--- a/app/views/jobs/2_panel_index_backup.html.erb
+++ b/app/views/jobs/2_panel_index_backup.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-6">
     <div id="job-search-results">
       <h1>Search Results: <%=@jobs.total_count%></h1>
       <select class="form-control" id="job-index-sort-select" name="sort">
@@ -34,6 +34,14 @@
           </tr>
         <%end%>
       </table>
+    </div>
+  </div>
+  <div class="col-md-6 job-description-half">
+    <!-- "data" updated via ajax on click of job table -->
+    <div id="job-description-container">
+      <h3>JOB DESCRIPTION</h3>
+      <p>Click on a job to see a description and apply!</p>
+      <p>[REACT PANEL HERE]</p>
     </div>
   </div>
 </div>
