Job search fully functional, fix job panel spacing and styling issues

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,8 @@
 $box-bg-color: #efefef;
 $box-border-color: #c0c0c0;
 $ocean-breeze: #78A5A3;
-$ocean-mist: rgb(223, 235, 235);
+$ocean-breeze-clear: rgba(120, 165, 163, 0.6);
+$ocean-mist: rgb(192, 213, 213);
 // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";
 @import "font-awesome";
