--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -156,29 +156,36 @@ thead {
 #notice, #alert{
   width: 70%;
   margin: 0 auto;
+  margin-top: 15px;
   text-align: center;
 }
 
 .box-form-page{
-  padding-top: 6%;
+  padding-top: 4%;
 }
 
 .box-form-container{
   background-color: $box-bg-color;
-  border: 1px solid $box-border-color;
-  border-radius: 10px;
+  padding: 0px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding-bottom: 15px;
+  .box-title-bar{
+    text-align: center;
+    align-self: stretch;
+    background-color: $ocean-breeze;
+    margin-bottom: 15px;
+    color: white;
+  }
   h3{
+    margin-top: 10px;
     text-align: center;
     font-weight: 200;
   }
 }
 .box-form {
-  width: 60%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -198,8 +205,10 @@ thead {
     }
   }
   input[type='submit']{
+    
     display: block;
     margin: 0 auto;
+    margin-top: 10px;
     border: solid #c0c0c0 .1em;
   }
 
