--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <div id="nav-main" class="nav ocean-breeze">
         <div id="brand"><%=link_to("AllPhysicianCareers", "/")%> <%=fa_icon("heartbeat")%></div>
         <a class="nav-main-links" href="/">Search Jobs</a>
-        <%= link_to "Post a Job", jobs_new_path, class:"nav-main-links"%>
+        <%= link_to "Post a Job", new_job_path, class:"nav-main-links"%>
         <a class="nav-main-links" data-toggle="modal" data-target="#contactInformationModal">Contact</a>
         <div class="nav-right">
           <% if user_signed_in? %>
