Tweak styling on react job searcher

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,8 @@ $box-border-color: #c0c0c0;
 $ocean-breeze: #78A5A3;
 $ocean-breeze-clear: rgba(120, 165, 163, 0.6);
 $ocean-mist: rgb(192, 213, 213);
+$ocean-mist-light: rgb(223, 238, 238);
+
 // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";
 @import "font-awesome";
