--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
         <a class="nav-main-links" data-toggle="modal" data-target="#contactInformationModal">Contact</a>
         <% if user_signed_in? %>
           <% if current_user.applicant? %>
-            <%= link_to "Saved Jobs", saved_jobs_path(current_user), class:"nav-main-links" %>
+            <%= link_to "Saved Jobs", '#', class:"nav-main-links" %>
             <%= link_to "Applications", '#', class:"nav-main-links" %>
           <% end %>
           <% if current_user.poster? %>
