--- a/app/views/jobs/new_edit.html.erb
+++ b/app/views/jobs/new_edit.html.erb
@@ -1,6 +1,6 @@
 <div class="box-form-page">
   <div class="row justify-content-center">
-    <div class="box-form-container col-md-6" id="new-job-form-container">
+    <div class="box-form-container col-md-8" id="new-job-form-container">
       <div class="box-title-bar">
         <h3>
           <%= action_name == "new" ?
@@ -47,10 +47,12 @@
         <%= f.text_field :contact_email %>
         </div>
 
-        <%= f.submit class: "btn-submit btn btn-large btn-success" %>
-        <% if action_name == "edit" %>
-          <%= link_to "Delete Job", job_path(@job), method: :delete, class: "btn btn-danger", data: {confirm: 'Are you sure?'}  %>
-        <% end %>
+        <div class="submit-controls">
+          <%= f.submit class: "btn-submit btn btn-large btn-success" %>
+          <% if action_name == "edit" %>
+            <%= link_to "Delete Job", job_path(@job), method: :delete, class: "btn btn-danger", data: {confirm: 'Are you sure?'}  %>
+          <% end %>
+        </div>
       <% end %>
     </div>
   </div>
