--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,7 +1,9 @@
 <div class="box-form-page">
   <div class="row justify-content-center">
     <div class="box-form-container col-md-6 ">
-      <h3>Edit <%= resource_name.to_s.humanize %></h3>
+      <div class="box-title-bar">
+        <h3>Edit Your Profile</h3>
+      </div>
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class:"box-form" }) do |f| %>
         <%= devise_error_messages! %>
@@ -58,17 +60,22 @@
           <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
           <%= f.password_field :current_password, autocomplete: "off" %>
         </div>
-
-        <div class="actions">
+        
+        <div class="submit-controls">
           <%= f.submit "Update", class: "btn" %>
+          <%= link_to "Back", :back, class: "btn btn-secondary" %>
         </div>
       <% end %>
-
-      <h3>Cancel my account</h3>
-      <div class="account-cancel-container">
-        <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %>
+    </div>
+  </div>
+  <div class="row justify-content-center">
+    <div class="box-form-container col-md-6 ">
+      <div class="box-title-bar">
+      <h3>Cancel your account</h3>
       </div>
-      <%= link_to "Back", :back %>
+      <div class="account-cancel-container">
+        <%= button_to "Cancel your account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %>
+      </div>
     </div>
   </div>
 </div>
