--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,8 +1,9 @@
 <div class="box-form-page">
   <div class="row justify-content-center">
     <div class="box-form-container col-md-6 ">
-      <h3>Sign up</h3>
-
+      <div class="box-title-bar">
+        <h3>Sign up</h3>
+      </div>
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class:'box-form'}) do |f| %>
         <%= devise_error_messages! %>
         
@@ -45,12 +46,13 @@
           <%= f.password_field :password_confirmation, autocomplete: "off" %>
         </div>
 
-        <div class="actions">
+        <div class="submit-controls">
           <%= f.submit "Sign up", class: 'btn' %>
         </div>
       <% end %>
-
-      <%= render "users/shared/links" %>
+      <div class="box-footer">
+        <%= render "users/shared/links" %>
+      </div>
     </div>
   </div>
 </div>
