--- a/app/assets/stylesheets/jobs/show.scss
+++ b/app/assets/stylesheets/jobs/show.scss
@@ -1,5 +1,5 @@
 #job-container {
-  padding: 2% 10%;
+
 
   h1{
     font-size: 2em;
@@ -16,6 +16,27 @@
   display: block;
   margin: 0 auto;
   margin-top: 20px;
+}
+
+.job-box-actions{
+  align-self: stretch;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  button{
+    flex: 0;
+    margin: 0 !important;
+    margin-top: 20px;
+  }
+}
+.job-box-contents{
+  max-width: calc(100% - 30px);
+  align-self: stretch;
+  margin: 15px;
+  border-top: 5px solid $ocean-breeze;
+  background-color: white;
+  padding: 20px;
+  word-wrap: break-word;
 }
 
 #applicationModal{
