--- a/app/views/jobs/_application_form.html.erb
+++ b/app/views/jobs/_application_form.html.erb
@@ -76,17 +76,9 @@
       </div>
     </div>
   </div>
-  <div class="modal-footer">
-    <div class="collapse" id="termsOfUse">
-      <div class="well">
-          <%=render "shared/terms_of_use"%>
-      </div>
-    </div>
-    <aside id="application-footer-terms-of-use">By applying to this job you agree to our <a role="button" data-toggle="collapse" href="#termsOfUse" aria-expanded="false" aria-controls="termsOfUse">Terms of Use</a>.</aside>
-    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-    <button type="submit" class="btn btn-primary submit-application-btn">Apply</button>
+  <div class="submit-row">
+    <button type="submit" class="btn btn-primary submit-application-btn btn-lg">Apply</button>
   </div>
-
 <%end%>
 
 
