Add association upon application creation

--- a/app/views/users/applications.html.erb
+++ b/app/views/users/applications.html.erb
@@ -1,10 +1,13 @@
 <div class="box-form-page">
-  <div class="box-form-container">
-    <div class="box-title-bar">
-      <h3>Your Applications</h3>
+  <div class="row justify-content-center">
+    <div class="box-form-container col-md-8">
+      <div class="box-title-bar">
+        <h3>Your Applications</h3>
+      </div>
+      <% @applications.each do |application| %>
+        <%= application.job.specialty %> in <%=application.job.city%>, <%= application.job.state%>. Applied <%= format_date(application.created_at) %>
+        <br/>
+      <% end %>
     </div>
-    <% @applications.each do |application| %>
-      <%= application.job.specialty %> in <%=application.job.city%>, <%=application.job.state%>. Applied <%= format_date(application.created_at) %>
-    <% end %>
   </div>
 </div>
