--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -4,7 +4,17 @@
     <div class="panel-heading">
       <h1 class="panel-title"><%="#{@job.specialty} Opening In #{@job.city}, #{@job.state}"%></h1>
       <div class="panel-title">
-        <button class="btn btn-punch btn-lg apply-btn" data-toggle="modal" data-target="#applicationModal">Apply</button>
+      <% if user_signed_in? %>
+        <% if current_user.applied_jobs.include? @job %>
+          <div class='application-notice'>
+            You applied for this job on <%= format_date(current_user.applications.where(job_id: @job.id).first.created_at) %>.
+          </div>
+        <% else %>
+          <button class="btn btn-punch btn-lg apply-btn" data-toggle="modal" data-target="#applicationModal">Apply</button>
+        <% end%>
+      <% else %>
+        <%= link_to "Please sign in to apply", new_user_session_path, class: "btn btn-lg btn-info" %>
+      <% end %>
       </div>
     </div>
     <div class="panel-body">
