--- a/app/assets/stylesheets/applications/new.scss
+++ b/app/assets/stylesheets/applications/new.scss
@@ -6,9 +6,14 @@
   textarea{
     resize: none;
   }
+  
+  .cv-input-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
   #new-application-cv-input{
-
     text-align: center;
     h4{
       font-weight: 200;
