--- a/app/views/jobs/_application_form.html.erb
+++ b/app/views/jobs/_application_form.html.erb
@@ -61,7 +61,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 cv-input-container">
           <div id="new-application-cv-input" class="form-group">
             <h4>Upload Your CV</h4>
             <label for="CV"><%=fa_icon("cloud-upload")%></label>
