--- a/app/views/users/saved_jobs.html.erb
+++ b/app/views/users/saved_jobs.html.erb
@@ -1,8 +1,8 @@
 <div class="saved-jobs-container">
-  <%= javascript_pack_tag 'saved_browser' %>
+  <%= javascript_pack_tag 'job_browser' %>
   <%= content_tag :div,
     class: "react-browser",
     id: "jobs-data",
-    data: rails_data do %>
+    data: rails_data.merge(saved_jobs: true) do %>
   <% end %>
 </div>
