--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/css?family=Catamaran:800|Jaldi:400,700|Open+Sans+Condensed:300,700" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyCK59YiVIlC2aTl0CO66BDR59_2rxlsph0" %>
+
   </head>
 
   <body>
