Fix layout for description

--- a/app/views/jobs/description_only.html.erb
+++ b/app/views/jobs/description_only.html.erb
@@ -6,7 +6,9 @@
       </div>
     </div>
     <div class="panel-body">
+      <div class="job-description">
       <%=@job.job_description_markup%>
+      </div>
     </div>
   </div>
 </div>
