--- a/app/assets/stylesheets/jobs/show.scss
+++ b/app/assets/stylesheets/jobs/show.scss
@@ -19,10 +19,10 @@
     text-align: center;
   }
 
-  .panel-body{
-    display: flex;
-    padding: 5%;
-  }
+  // .panel-body{
+  //   display: flex;
+  //   padding: 5%;
+  // }
 }
 
 .apply-btn {
